--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 				<div class="col-md-12">
 					<div class="intro-message">
 						<h1>
-							A Collaborative Community
+							A Collaborative Community of Student Projects
 						</h1>
 						<h3>
 							Build your multidisciplinary team here.
