--- a/Index.html
+++ b/Index.html
@@ -34,7 +34,7 @@
 <div id="mc_embed_signup">
 <form action="//KahootsHQ.us9.list-manage.com/subscribe/post?u=1bc3d09a2c39e13c85001a29c&amp;id=b7ccc46dd2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe Because Your Awesome.</label>
+	<label for="mce-EMAIL">Subscribe Because Your Awesome</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_1bc3d09a2c39e13c85001a29c_b7ccc46dd2" tabindex="-1" value=""></div>
