--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							A Collaborative Community of Student Projects
 						</h1>
 						<h3>
-							Build your multidisciplinary team here.
+							Build Your Multidisciplinary Team Here.
 						</h3>
 					</div>
 				</div>
