--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>You Rock</title>
+		<title>Vapor+</title>
 		<link rel="stylesheet" type="text/css" href="style2.css"/>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	</head>
@@ -12,7 +12,7 @@
 				<div class="col-md-12">
 					<div class="intro-message">
 						<h1>
-							A Collaborative Community of Student Projects
+							image: url(VaporPlus.png) no-repeat center center;
 						</h1>
 						<h3>
 							Build Your Multidisciplinary Team Here.
